Try and fix side to side scroll on smaller viewport

--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,6 @@
   width: 50% !important;
 }
 
+.navbar-fixed-top {
+  position: absolute;
+}
